...
        android:onClick="setDuration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editTextStartTime"
        app:layout_constraintTop_toTopOf="@+id/editTextDate" />

    <Button
        android:id="@+id/buttonConfirmUpload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="confirmActivityUpload"
        android:text="Create"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
...
